Version 1.0.6:
	Bug fixes
	- Search & replace handles zero-width search results from regular expressions
	  allowing, for example, inserting a string at the start of the line by
	  replacing the pattern ^ by some text.

Version 1.0.5:
	Fix the configure script such that it attempts to compile all tests using the
	correct CXXFLAGS.

Version 1.0.4:
	Introduce a PCRE2 compatibility layer using PCRE, to allow compilation on
	platforms which don't provide PCRE2.

Version 1.0.3:
	New features:
	- Migrate to using PCRE2 instead of PCRE.

	Bug fixes:
	- Unsplitting caused segmentation faults.
	- The connection to GPM remained open during suspend, making GPM useless for
	  the duration of the suspend.
	- Prevent the mouse cursor from moving beyond the top of the screen while
	  holding down the mouse button in GPM mode.
	- Ensure that the mouse cursor is visible when the holding down the mouse
	  button in GPM mode.
	- Allow searching for empty strings using regular expressions.

Version 1.0.2:
	Fix hanging on exit in the X11 module.

Version 1.0.1:
	Fix compilation on some older compilers, that don't automatically apply
	moves.

Version 1.0.0:
	The API has been overhauled to use more of the features of the C++11
	standard. This release is both binary and API incompatible with previous
	releases.

Version 0.6.4:
	Bug fixes:
	- Bracketed paste mode was not handled correctly due to inadvertent setting
	  of the EKEY_PROTECT bit.

Version 0.6.3:
	Bug fixes:
	- The indicator in list panes would disappear of screen when scrolling
	  beyond the first page.
	- The cursor position after undoing an unindent operation was set
	  incorrectly.

Version 0.6.2:
	Bug fixes:
	- Bracketed-paste mode would hang indefinitely and did not properly
	  recognize line endings.

Version 0.6.1:
	Bug fixes:
	- Key bindings for split windows (F8 and Shift-F8) were broken.

Version 0.6.0:
	New features:
	- Allow replacing of menu items.
	- Make key bindings configurable.