@@ -3,6 +3,8 @@ Version 1.0.6:
 	- Search & replace handles zero-width search results from regular expressions
 	  allowing, for example, inserting a string at the start of the line by
 	  replacing the pattern ^ by some text.
+	- Calling indent_selection and unindent_selection on an edit_window_t now
+	  correctly performs the same action as pressing tab and shift-tab.
 
 Version 1.0.5:
 	Fix the configure script such that it attempts to compile all tests using the
